--- a/app/src/main/res/layout/activity_otp_input.xml
+++ b/app/src/main/res/layout/activity_otp_input.xml
@@ -4,13 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/bg_auth"
+    android:background="@drawable/bg_auth_fix"
     android:gravity="center"
     android:orientation="vertical"
     android:paddingHorizontal="32dp"
     android:paddingTop="32dp"
     android:paddingBottom="64dp"
-    tools:context=".login.OtpInputActivity">
+    tools:context=".auth.login.OtpInputActivity">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
@@ -29,19 +29,48 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
 
-            <TextView
-                android:layout_width="match_parent"
+            <ImageView
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:text="@string/txt_verify_otp"
-                android:textAlignment="center"
-                android:textAllCaps="true"
-                android:textSize="32sp" />
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="32dp"
+                android:src="@drawable/bg_otp"
+                tools:ignore="ContentDescription" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="32dp"
+                android:text="@string/input_code"
+                android:textColor="#324B4A"
+                android:textSize="14sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="8dp"
+                android:text="@string/txt_ask_resend_otp"
+                android:textColor="#324B4A"
+                android:textSize="14sp" />
+
+            <com.google.android.material.textview.MaterialTextView
+                android:id="@+id/btn_resend_otp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="4dp"
+                android:text="@string/resend_otp"
+                android:textColor="#324B4A"
+                android:textStyle="bold" />
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="32dp"
+                android:layout_marginTop="24dp"
                 android:gravity="center"
                 android:orientation="horizontal">
 
@@ -142,32 +171,12 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="16dp"
+                android:layout_marginBottom="32dp"
+                android:paddingHorizontal="32dp"
                 android:text="@string/verify"
+                android:textAllCaps="false"
+                app:cornerRadius="30dp"
                 android:textSize="18sp" />
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:layout_marginBottom="16dp"
-                android:gravity="center"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/txt_ask_resend_otp" />
-
-                <com.google.android.material.textview.MaterialTextView
-                    android:id="@+id/btn_resend_otp"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="8dp"
-                    android:text="@string/resend_otp"
-                    android:textColor="@color/bluePrimary"
-                    android:textStyle="bold" />
-            </LinearLayout>
-
         </LinearLayout>
 
 
