--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -5,8 +5,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:gravity="center"
     android:paddingHorizontal="16dp"
-    tools:context=".login.LoginFragment">
+    tools:context=".auth.login.LoginFragment">
 
     <com.google.android.material.textfield.TextInputLayout
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
@@ -55,6 +56,7 @@
         android:text="@string/login"
         android:textAllCaps="false"
         android:textSize="18sp"
+        app:cornerRadius="15dp"
         app:backgroundTint="@color/bluePrimary" />
 
 </LinearLayout>
