--- a/app/src/main/res/layout/activity_detail_vendor.xml
+++ b/app/src/main/res/layout/activity_detail_vendor.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".detailVendor.DetailVendorActivity">
+    tools:context=".home.detailVendor.DetailVendorActivity">
 
     <FrameLayout
         android:id="@+id/img_motorcycle"
