--- a/app/src/main/res/layout/fragment_vendor_services.xml
+++ b/app/src/main/res/layout/fragment_vendor_services.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".detailVendor.VendorServicesFragment">
+    tools:context=".home.detailVendor.VendorServicesFragment">
 
     <ProgressBar
         android:id="@+id/progressBar"
