--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="white">#FFFFFFFF</color>
 
     <color name="bluePrimary">#3D84A8</color>
+    <color name="blue2">#ABEDD8</color>
 </resources>
