--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:android="http://schemas.android.com/apk/res/android">
     <color name="purple_200">#FFBB86FC</color>
     <color name="purple_500">#FF6200EE</color>
     <color name="purple_700">#FF3700B3</color>
@@ -10,4 +10,10 @@
 
     <color name="bluePrimary">#3D84A8</color>
     <color name="blue2">#ABEDD8</color>
+    <color name="gradient">
+        <gradient
+            android:startColor="#3F86A9"
+            android:endColor="#A7E6D8"
+            android:type="linear" />
+    </color>
 </resources>
