add login logic, add logout button logic, show user name on fragment_profile.xml

--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -117,6 +117,7 @@
                 android:background="@color/bluePrimary" />
 
             <com.google.android.material.button.MaterialButton
+                android:id="@+id/btn_logout"
                 style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
