--- a/app/src/main/res/layout/activity_email_confirm.xml
+++ b/app/src/main/res/layout/activity_email_confirm.xml
@@ -30,14 +30,43 @@
             android:orientation="vertical"
             android:padding="16dp">
 
-            <com.google.android.material.textview.MaterialTextView
-                android:id="@+id/tv_ask_email_verify"
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/example_ask_email"
+                android:layout_gravity="center"
+                android:orientation="horizontal">
+
+                <com.google.android.material.textview.MaterialTextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/ask_email_1"
+                    android:textAlignment="center"
+                    android:textColor="#324B4A"
+                    android:textStyle="bold" />
+
+                <com.google.android.material.textview.MaterialTextView
+                    android:id="@+id/tv_ask_email_verify"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="4dp"
+                    android:text="email@mail.com"
+                    android:textAlignment="center"
+                    android:textColor="#324B4A"
+                    android:textStyle="bold"
+                    tools:ignore="HardcodedText" />
+
+            </LinearLayout>
+
+            <com.google.android.material.textview.MaterialTextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="2dp"
+                android:text="@string/ask_email_2"
                 android:textAlignment="center"
                 android:textColor="#324B4A"
                 android:textStyle="bold" />
+
 
             <com.google.android.material.textview.MaterialTextView
                 android:id="@+id/tv_desc_email_verify"
