--- a/app/src/main/res/layout/activity_pembayaran2.xml
+++ b/app/src/main/res/layout/activity_pembayaran2.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#3D84A8"
+    android:orientation="vertical"
     tools:context=".home.pembayaran.PembayaranActivity2">
 
     <com.google.android.material.appbar.AppBarLayout
-        android:id="@+id/appBarLayout"
+        android:id="@+id/layout_bar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
@@ -20,7 +20,7 @@
             android:layout_height="wrap_content">
 
             <androidx.appcompat.widget.Toolbar
-                android:id="@+id/toolbar1"
+                android:id="@+id/toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@color/white"
@@ -31,7 +31,7 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <ImageButton
-                android:id="@+id/btnKembali"
+                android:id="@+id/btn_back"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:layout_marginStart="16dp"
@@ -50,137 +50,198 @@
                 android:textColor="@color/black"
                 android:textSize="20sp"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/btnKembali"
+                app:layout_constraintStart_toEndOf="@+id/btn_back"
                 app:layout_constraintTop_toTopOf="parent" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </com.google.android.material.appbar.AppBarLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="350dp"
-        android:layout_height="600dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
-        android:background="@drawable/bg_pembayaran"
-        android:elevation="20dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.491"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/appBarLayout">
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#3D84A8"
+        android:padding="16dp">
 
-        <ImageView
-            android:id="@+id/img_pembayaran"
-            android:layout_width="237dp"
-            android:layout_height="229dp"
-            android:layout_marginTop="8dp"
-            android:background="@drawable/img_pembayaran"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:ignore="ContentDescription" />
-
-        <TextView
-            android:id="@+id/pilih_metode"
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:fontFamily="@font/poppins"
-            android:padding="8dp"
-            android:text="@string/pilih_metode_pembayaran"
-            android:textColor="@color/black"
-            android:textSize="20sp"
-            android:textStyle="bold"
-            app:layout_constraintEnd_toEndOf="@+id/img_pembayaran"
-            app:layout_constraintStart_toStartOf="@+id/img_pembayaran"
-            app:layout_constraintTop_toBottomOf="@+id/img_pembayaran" />
-
-        <RelativeLayout
-            android:id="@+id/rl1"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="24dp"
-            android:layout_marginEnd="16dp"
+            android:background="@drawable/bg_pembayaran"
+            android:elevation="20dp"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/pilih_metode">
+            app:layout_constraintTop_toTopOf="parent">
+
+            <ImageView
+                android:id="@+id/img_payment"
+                android:layout_width="237dp"
+                android:layout_height="229dp"
+                android:layout_marginTop="8dp"
+                android:background="@drawable/img_pembayaran"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:ignore="ContentDescription" />
 
             <TextView
+                android:id="@+id/tv_method"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentStart="true"
-                android:layout_marginStart="8dp"
+                android:layout_marginTop="16dp"
                 android:fontFamily="@font/poppins"
-                android:padding="16dp"
-                android:text="@string/ovo"
+                android:padding="8dp"
+                android:text="@string/pilih_metode_pembayaran"
                 android:textColor="@color/black"
-                android:textSize="18sp"
+                android:textSize="20sp"
                 android:textStyle="bold"
-                tools:ignore="RelativeOverlap" />
+                app:layout_constraintEnd_toEndOf="@+id/img_payment"
+                app:layout_constraintStart_toStartOf="@+id/img_payment"
+                app:layout_constraintTop_toBottomOf="@+id/img_payment" />
 
-            <Button
-                android:layout_width="90dp"
-                android:layout_height="45dp"
-                android:layout_alignParentEnd="true"
-                android:layout_centerVertical="true"
-                android:layout_marginEnd="8dp"
-                android:background="@drawable/bg_pembayaran"
-                android:fontFamily="@font/poppins"
-                android:text="@string/pilih"
-                android:textSize="16sp"
-                android:textStyle="bold" />
-        </RelativeLayout>
-
-        <RelativeLayout
-            android:id="@+id/rl2"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="16dp"
-            android:layout_marginEnd="16dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/rl1">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentStart="true"
-                android:layout_marginStart="8dp"
-                android:fontFamily="@font/poppins"
-                android:padding="16dp"
-                android:text="@string/shopeepay"
-                android:textColor="@color/black"
-                android:textSize="18sp"
-                android:textStyle="bold"
-                tools:ignore="RelativeOverlap" />
-
-            <Button
-                android:layout_width="90dp"
-                android:layout_height="45dp"
-                android:layout_alignParentEnd="true"
-                android:layout_centerVertical="true"
-                android:layout_marginEnd="8dp"
-                android:background="@drawable/bg_pembayaran"
-                android:fontFamily="@font/poppins"
-                android:text="@string/pilih"
-                android:textSize="16sp"
-                android:textStyle="bold" />
+            <!--            <TextView-->
+            <!--                android:id="@+id/tv_ovo"-->
+            <!--                android:layout_width="wrap_content"-->
+            <!--                android:layout_height="wrap_content"-->
+            <!--                android:layout_centerVertical="true"-->
+            <!--                android:layout_marginTop="24dp"-->
+            <!--                android:fontFamily="@font/poppins"-->
+            <!--                android:padding="8dp"-->
+            <!--                android:text="@string/ovo"-->
+            <!--                android:textColor="@color/black"-->
+            <!--                android:textSize="18sp"-->
+            <!--                android:textStyle="bold"-->
+            <!--                app:layout_constraintStart_toStartOf="@+id/tv_method"-->
+            <!--                app:layout_constraintTop_toBottomOf="@+id/tv_method"-->
+            <!--                tools:ignore="RelativeOverlap" />-->
 
             <!--            <Button-->
-            <!--                android:layout_width="70dp"-->
-            <!--                android:layout_height="35dp"-->
-            <!--                android:layout_alignParentEnd="true"-->
-            <!--                android:layout_marginEnd="8dp"-->
-            <!--                android:background="@drawable/bg_pembayaran"-->
+            <!--                android:id="@+id/btn_choose_ovo"-->
+            <!--                android:layout_width="wrap_content"-->
+            <!--                android:layout_height="wrap_content"-->
+            <!--                android:background="@drawable/bg_button_pembayaran"-->
             <!--                android:fontFamily="@font/poppins"-->
             <!--                android:text="@string/pilih"-->
-            <!--                android:textSize="10sp"-->
-            <!--                tools:ignore="SmallSp" />-->
-        </RelativeLayout>
+            <!--                android:textSize="16sp"-->
+            <!--                android:textStyle="bold"-->
+            <!--                app:layout_constraintBottom_toBottomOf="@+id/tv_ovo"-->
+            <!--                app:layout_constraintEnd_toEndOf="@+id/tv_method"-->
+            <!--                app:layout_constraintTop_toTopOf="@+id/tv_ovo" />-->
 
+            <!--            <TextView-->
+            <!--                android:id="@+id/tv_shopeepay"-->
+            <!--                android:layout_width="wrap_content"-->
+            <!--                android:layout_height="wrap_content"-->
+            <!--                android:layout_centerVertical="true"-->
+            <!--                android:layout_marginTop="24dp"-->
+            <!--                android:layout_marginBottom="40dp"-->
+            <!--                android:fontFamily="@font/poppins"-->
+            <!--                android:padding="8dp"-->
+            <!--                android:text="@string/shopeepay"-->
+            <!--                android:textColor="@color/black"-->
+            <!--                android:textSize="18sp"-->
+            <!--                android:textStyle="bold"-->
+            <!--                app:layout_constraintBottom_toBottomOf="parent"-->
+            <!--                app:layout_constraintStart_toStartOf="@+id/tv_ovo"-->
+            <!--                app:layout_constraintTop_toBottomOf="@+id/tv_ovo"-->
+            <!--                tools:ignore="RelativeOverlap" />-->
+
+
+            <!--            <Button-->
+            <!--                android:id="@+id/btn_choose_shopeepay"-->
+            <!--                android:layout_width="wrap_content"-->
+            <!--                android:layout_height="wrap_content"-->
+            <!--                android:layout_alignParentEnd="true"-->
+            <!--                android:layout_centerVertical="true"-->
+            <!--                android:background="@drawable/bg_button_pembayaran"-->
+            <!--                android:fontFamily="@font/poppins"-->
+            <!--                android:text="@string/pilih"-->
+            <!--                android:textSize="16sp"-->
+            <!--                android:textStyle="bold"-->
+            <!--                app:layout_constraintBottom_toBottomOf="@+id/tv_shopeepay"-->
+            <!--                app:layout_constraintEnd_toEndOf="@+id/btn_choose_ovo"-->
+            <!--                app:layout_constraintStart_toStartOf="@+id/btn_choose_ovo"-->
+            <!--                app:layout_constraintTop_toTopOf="@+id/tv_shopeepay" />-->
+
+            <RelativeLayout
+                android:id="@+id/layout_ovo"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="24dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tv_method">
+
+                <TextView
+                    android:id="@+id/tv_ovo"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:layout_alignParentStart="true"
+                    android:layout_marginTop="24dp"
+                    android:fontFamily="@font/poppins"
+                    android:padding="8dp"
+                    android:text="@string/ovo"
+                    android:textColor="@color/black"
+                    android:textSize="18sp"
+                    android:textStyle="bold"
+                    tools:ignore="RelativeOverlap" />
+
+                <Button
+                    android:id="@+id/btn_choose_ovo"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/bg_button_pembayaran"
+                    android:fontFamily="@font/poppins"
+                    android:text="@string/pilih"
+                    android:layout_marginEnd="8dp"
+                    android:textSize="16sp"
+                    android:textStyle="bold"
+                    android:layout_centerVertical="true"
+                    android:layout_alignParentEnd="true"/>
+
+
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:id="@+id/layout_shopeepay"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:layout_marginBottom="50dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/layout_ovo">
+
+                <TextView
+                    android:id="@+id/tv_shopeepay"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:fontFamily="@font/poppins"
+                    android:padding="8dp"
+                    android:text="@string/shopeepay"
+                    android:textColor="@color/black"
+                    android:textSize="18sp"
+                    android:textStyle="bold"
+                    tools:ignore="RelativeOverlap" />
+
+                <Button
+                    android:id="@+id/btn_choose_shopeepay"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentEnd="true"
+                    android:layout_centerVertical="true"
+                    android:layout_marginEnd="8dp"
+                    android:background="@drawable/bg_button_pembayaran"
+                    android:fontFamily="@font/poppins"
+                    android:text="@string/pilih"
+                    android:textSize="16sp"
+                    android:textStyle="bold" />
+
+            </RelativeLayout>
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+</LinearLayout>
