--- a/app/src/main/res/layout/alert_konfirmasi_pembayaran.xml
+++ b/app/src/main/res/layout/alert_konfirmasi_pembayaran.xml
@@ -3,8 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".home.pembayaran.KonfirmasiPembayaranActivity">
+    xmlns:tools="http://schemas.android.com/tools">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
@@ -44,7 +43,10 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="32dp"
                 android:paddingHorizontal="64dp"
+                android:paddingVertical="15dp"
                 android:text="@string/done"
+                android:textSize="16sp"
+                android:textStyle="bold"
                 android:textAllCaps="false"
                 app:cornerRadius="30dp" />
         </LinearLayout>
